newPostsFeed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newpostsfeed-deployment
  labels:
    app: newpostsfeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newpostsfeed
  template:
    metadata:
      labels:
        app: newpostsfeed
    spec:
      containers:
        - name: newpostsfeed
          image: bartvnim/trackpackers-newpostsfeed:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: newpostsfeed-service
spec:
  selector:
    app: newpostsfeed
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30201
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
