userservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-deployment
  labels:
    app: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: bartvnim/trackpackers-userservice:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: userservice-service
spec:
  selector:
    app: userservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30202
  type: NodePort
